--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div class="home-row">
             <div class="home-txt">
                 <h1>Noishi Ramen</h1>
-                <p class="home-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <p class="home-desc">Nikmati kelezatan ramen autentik Jepang
                     <br>
-                    Labore a molestiae laboriosam.
+                    yang disajikan dengan cinta dan cita rasa terbaik.
                 </p>
                 <p class="home-address">
                     3th Floor AEON Mall Purwokerto City
@@ -63,7 +63,7 @@
     <section class="menu" id="menu">
         <div class="menu-title">
             <h2>Most Popular Dishes</h2>
-            <p>Natus sapiente laboriosam rem, sit dolorem explicabo.</p>
+            <p>Menu favorit pelanggan kami, dibuat dari bahan-bahan berkualitas premium.</p>
         </div>
 
         <div class="menu-content">
@@ -80,7 +80,7 @@
                         <a href="#"><i class='bx bxs-star' ></i></a>
                         <a href="#"><i class='bx bxs-star' ></i></a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Ramen pedas yang menggugah selera dengan kuah kaya rempah.</p>
                     <div class="menu-price">
                         <h4>$10</h4>
                     </div>
@@ -163,7 +163,7 @@
             Similique laudantium dicta soluta
             </p>
 
-            <a class="btn-bk">Bok a Table</a>
+            <a class="btn-bk">Book a Table</a>
         </div>
     </section>
 
