--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <a href="#"><i class='bx bxs-star' ></i></a>
                         <a href="#"><i class='bx bxs-star' ></i></a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Sushi favorit dengan sensasi creamy mayo yang meleleh di mulut.</p>
                     <div class="menu-price">
                         <h4>$10</h4>
                     </div>
@@ -121,7 +121,7 @@
                         <a href="#"><i class='bx bxs-star' ></i></a>
                         <a href="#"><i class='bx bxs-star' ></i></a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Ramen pedas yang menggugah selera dengan kuah kaya rempah.</p>
                     <div class="menu-price">
                         <h4>$10</h4>
                     </div>
@@ -141,7 +141,7 @@
                         <a href="#"><i class='bx bxs-star' ></i></a>
                         <a href="#"><i class='bx bxs-star' ></i></a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> 
+                    <p>Sushi favorit dengan sensasi creamy mayo yang meleleh di mulut.</p> 
                     <div class="menu-price">
                         <h4>$10</h4>
                     </div>
@@ -158,9 +158,9 @@
 
         <div class="about-txt">
             <h1>Why Noishi Ramen?</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            <br>
-            Similique laudantium dicta soluta
+            <p>Kami mengutamakan rasa otentik dengan bahan segar pilihan.
+                <br>
+                Setiap mangkuk dibuat dengan dedikasi untuk kenikmatan maksimal.
             </p>
 
             <a class="btn-bk">Book a Table</a>
@@ -171,7 +171,7 @@
     <section class="menu-slider">
         <div class="mn-desc">
             <h2>Fresh Sushi Everyday</h2>
-            <p>Natus sapiente laboriosam rem, sit dolorem explicabo.</p>
+            <p>Setiap hari kami menyajikan sushi segar langsung dari dapur kami untuk Anda.</p>
         </div>
 
         <div id="slider">
@@ -186,8 +186,7 @@
                         <div class="slide-content">
                             <div class="slide-desc">
                                 <h1>Tuna Mayo</h1>
-                                <p>Lorem ipsum dlor sit amet consectetur adipisicing elit. 
-                                Impedit eveniet minima eum perspiciatis molestiae
+                                <p>Potongan tuna premium dengan saus mayo spesial, sempurna untuk setiap waktu.
                                 </p>
                                 <h4>For only <span>$15</span></h4>
                             </div>
@@ -203,9 +202,7 @@
                             </div>
                            <div class="slide-desc">
                                 <h1>Salmon Mayo</h1>
-                                <p>Lorem ipsum dlor sit amet consectetur adipisicing elit. 
-                                Impedit eveniet minima eum perspiciatis molestiae
-                                </p>
+                                <p>Salmon segar dengan balutan mayo gurih, pilihan sempurna untuk pencinta seafood.</p>
                                 <h4>For only <span>$15</span></h4>
                             </div>
                         </div>
@@ -214,8 +211,7 @@
                         <div class="slide-content">
                             <div class="slide-desc">
                                 <h1>Tuna Mayo</h1>
-                                <p>Lorem ipsum dlor sit amet consectetur adipisicing elit. 
-                                Impedit eveniet minima eum perspiciatis molestiae
+                                <p>Potongan tuna premium dengan saus mayo spesial, sempurna untuk setiap waktu.
                                 </p>
                                 <h4>For only <span>$15</span></h4>
                             </div>
@@ -231,9 +227,7 @@
                             </div>
                             <div class="slide-desc">
                                 <h1>Salmon Mayo</h1>
-                                <p>Lorem ipsum dlor sit amet consectetur adipisicing elit. 
-                                Impedit eveniet minima eum perspiciatis molestiae
-                                </p>
+                                <p>Salmon segar dengan balutan mayo gurih, pilihan sempurna untuk pencinta seafood.</p>
                                 <h4>For only <span>$15</span></h4>
                             </div>
                         </div>
@@ -292,7 +286,7 @@
     </section>
 
     <div class="last-text">
-        <p>© 2023 KohAku <br>Muhammad Abdiel Al Hafiz</p>
+        <p>© 2025 KohAku <br>Kohaku Official</p>
     </div>
 
     <!---scroll top-->
