--- a/index.html
+++ b/index.html
@@ -147,6 +147,46 @@
                     </div>
                 </div>
             </div>
+
+            <div class="menu-row">
+                <img src="img/mpd/3.jpg" alt="">
+                <div class="menu-desc">
+                    <div class="menu-name">
+                        <h4>Hot Noodle</h4>
+                    </div>
+                    <div class="star">
+                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#"><i class='bx bxs-star' ></i></a>
+                    </div>
+                    <p>Ramen pedas yang menggugah selera dengan kuah kaya rempah.</p>
+                    <div class="menu-price">
+                        <h4>$10</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu-row">
+                <img src="img/mpd/2.jpg" alt="">
+                <div class="menu-desc">
+                    <div class="menu-name">
+                        <h4>Sushi Mayo</h4>
+                    </div>
+                    <div class="star">
+                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#"><i class='bx bxs-star' ></i></a>
+                    </div>
+                    <p>Sushi favorit dengan sensasi creamy mayo yang meleleh di mulut.</p>
+                    <div class="menu-price">
+                        <h4>$10</h4>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
